--- a/client/src/app/component/main-activity/main-activity.component.scss
+++ b/client/src/app/component/main-activity/main-activity.component.scss
@@ -18,6 +18,7 @@
     max-width: 25vw;
     padding-top: $spacer2x;
     background-color: $white;
+    overflow: auto;
 
     li {
       width: 100%;
