--- a/client/src/assets/styles/_reset.scss
+++ b/client/src/assets/styles/_reset.scss
@@ -6,6 +6,7 @@ html, body {
   margin: 0;
   padding: 0;
   font-size: sans-serif;
+  scroll-behavior: smooth;
   text-rendering: geometricPrecision;
   font-smooth: antialiased;
   -webkit-font-smoothing: antialiased;
