--- a/client/src/app/component/main-activity/main-activity.component.html
+++ b/client/src/app/component/main-activity/main-activity.component.html
@@ -95,7 +95,7 @@
     class="board__canvas"
     (mousedown)="initDrawing($event)"
     (mousemove)="handleUserMovement($event)"
-    (mouseup)="stopDrawing($event)"
+    (mouseup)="stopDrawing(context)"
     >
   </canvas>
 </div>
