successfully added freeform with brush props to socket

--- a/client/src/app/component/main-activity/main-activity.component.html
+++ b/client/src/app/component/main-activity/main-activity.component.html
@@ -43,7 +43,8 @@
         Brush Color
         <input
           [(colorPicker)]="drawingAttributes.color"
-          [style.background]="drawingAttributes.color" />
+          [style.background]="drawingAttributes.color"
+          />
       </label>
     </li>
     <li>
